# weasyprint_server

./: .gitignore  .pylintrc  Pipfile  Procfile.dev  README.md  app.py  custom_fetcher.py  env.example  package.sh  pyproject.toml  requirements.txt  simple_package.sh  tasks.py  test_app.py  wsgi.py
.github/workflows/: lint.yml  pylint.yml  quality.yml  tests.yml
ops/dev/: Dockerfile  docker-compose.yml
ops/production/: Dockerfile
package_scripts/: Dockerfile  Dockerfile_vanilla  main.sh  package.sh
package_scripts/deb/DEBIAN/: control  postinst  postrm  preinst  prerm
package_scripts/deb/opt/weasyprint/default_conf/etc/opt/: weasyprint.ini
package_scripts/deb/opt/weasyprint/default_conf/logrotate/: weasyprint
package_scripts/deb/opt/weasyprint/default_conf/systemd/: weasyprint.service
src/: app.py  custom_fetcher.py
tests/: test_app.py  test_generation.py  test_non_regression.py
tests/fixtures/: procedure-98904.html
weasyprint_server/: app.py  custom_fetcher.py  logger.py
